--- a/project/package.json
+++ b/project/package.json
@@ -59,13 +59,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.15.0",
     "@jedmao/redux-mock-store": "^3.0.5",
     "@redux-devtools/extension": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/faker": "^5.5.8",
-    "@types/jest": "^29.1.2",
+    "@types/jest": "^29.5.3",
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -73,7 +74,8 @@
     "axios-mock-adapter": "^1.21.2",
     "eslint-config-htmlacademy": "^8.0.0",
     "faker": "^5.5.3",
-    "typescript": "^4.8.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.15.0"
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "typescript": "^4.8.4"
   }
 }
