--- a/project/package.json
+++ b/project/package.json
@@ -73,6 +73,7 @@
     "axios-mock-adapter": "^1.21.2",
     "eslint-config-htmlacademy": "^8.0.0",
     "faker": "^5.5.3",
+    "prettier": "^3.0.2",
     "typescript": "^4.8.4"
   }
 }
